test/fail/use-before-define.mo
func f():Int = x;
let y = f();
let x = 1;
debug_print_Int(x);
